<resources>
    <string name="app_name">Live Wire</string>
    <string name="facebook_app_id">238182020387506</string>
    <string name="fb_login_protocol_scheme">fb238182020387506</string>
    <string name="server_client_id">406685131499-44916quekffn8piijsacoembl5sbb0a6.apps.googleusercontent.com</string>
    <string name="select_user_type">Select User Type</string>
    <string name="demo_text">Lorem ipsum dolor sit amet, consect adipi elit Donec pretium ipsum erat</string>
    <string name="continue1">Continue</string>
    <string name="i_want_to_work">I want to work</string>
    <string name="i_want_to_hire">I want to hire</string>
    <string name="help_needed">(Help needed)</string>
    <string name="full_name">Full Name</string>
    <string name="email_id">Email Id</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login">Login</string>
    <string name="more_info_about">More info about</string>
    <string name="lorem_ipsum">Lorem Ipsum</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="remember_me">Remember Me</string>
    <string name="login_with_google">Login With Google</string>
    <string name="signup_with_google">Sign Up With Google</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="or">OR</string>
    <string name="skip">Skip</string>
    <string name="complete_your_profile">Complete Your Profile</string>
    <string name="upload_a_intro_video">Upload an intro video</string>
    <string name="town_of_residence">Town Of Residence</string>
    <string name="valide_email">Please enter valid Email!</string>
    <string name="crop_image_activity_title">Crop Image</string>
    <string name="crop_image_menu_rotate_left">Rotate counter clockwise</string>
    <string name="crop_image_menu_rotate_right">Rotate</string>
    <string name="crop_image_menu_crop">Crop</string>
    <string name="pick_image_intent_chooser_title">Select source</string>
    <string name="result_image_desc">crop result</string>
    <string name="pick_image_intent_text">Choose an image</string>
    <string name="share_on_live_wire">Share On Live Wire</string>
    <string name="description">Description</string>
    <string name="location">Location</string>
    <string name="budget">Budget</string>
    <string name="dollar">$</string>
    <string name="Zar">R</string>
    <string name="select_job_date">Select Date</string>
    <string name="select_skill">Select Skill</string>
    <string name="select_job_start_date">Select Project Start Date</string>
    <string name="select_job_end_date">Select Project End Date</string>
    <string name="select_week_days">Select Week Days</string>
    <string name="hour_required_per_day">Hours</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="select_skills">Select Skills</string>
    <string name="add_skills">Add Skills</string>
    <string name="hourly_rate_range">Hourly Rate Range</string>
    <string name="min_price">Min Price</string>
    <string name="max_price">Max Price</string>
    <string name="short_term">SHORT TERM</string>
    <string name="short_term1">Short term</string>
    <string name="find_long_term_help_paid_by_the_hour_to_ease_the_stress_of_daily_living_worker_profile_video_and_chat_will_help_you_find_the_perfect_match_for_your_family">Find long term help, paid by the hour to ease the stress of daily living. Worker profile video and chat will help you find the perfect match for your family.</string>
    <string name="find_help_in_once_off_situations_where_a_helping_hand_is_needed_view_worker_profile_videos_and_chat_to_them_before_you_hire_a_budget_is_set_for_these_projects">Find help in ONCE off situations where a helping hand is needed. View worker profile videos and chat to them before you hire. A budget is set for these projects.</string>
    <string name="apply">Apply</string>
    <string name="filter">Filter</string>
    <string name="sort_by">Sort By</string>
    <string name="all_work">All Work</string>
    <string name="new_work">New Work</string>
    <string name="filter_by">Filter By</string>
    <string name="more_info">More Info</string>
    <string name="no_job_post_available">No job post available</string>
    <string name="if_you_have_not_joined">If you have not joined our community yet,</string>
    <string name="welcome_to_live_wire">WELCOME TO LIVE WIRE</string>
    <string name="posted_by">Posted By</string>
    <string name="chat">Chat</string>
    <string name="deatils">Details</string>
    <string name="house_amp_needed"><![CDATA[House & Needed]]></string>
    <string name="work_detail">WORK DETAIL</string>
    <string name="moreinfo">MoreInfo</string>
    <string name="sendrequest">SendRequest</string>
    <string name="pending_request">Request Pending</string>
    <string name="application_pending">Application Pending</string>
    <string name="Work_offer_pending">Work Offer pending</string>
    <string name="pending_application">Pending Application</string>
    <string name="send_request">Send Request</string>
    <string name="done">Done</string>
    <string name="select_days">Select Days</string>
    <string name="near_you">NEAR YOU</string>
    <string name="rate_range">Rate Range</string>
    <string name="hr">/hr</string>
    <string name="rate_i_can_offer">RATE I CAN OFFER</string>
    <string name="enter_offer_rate_per_hour">Enter Rate (Per hour)</string>
    <string name="job_confirmed">Work Confirmed</string>
    <string name="my_work">MY WORK</string>
    <string name="single_project_task">Single Project Task</string>
    <string name="confirm_application">Confirm Application</string>
    <string name="ongoing_help">OnGoing Help</string>
    <string name="record_not_found">No Record Found</string>
    <string name="login_with_facebook">Login with Facebook</string>
    <string name="accept">Accept</string>
    <string name="request">Request</string>
    <string name="applicants">Applicants</string>
    <string name="applications">Applications</string>
    <string name="application">Application</string>
    <string name="no_applicants_yet">No applicants yet</string>
    <string name="no_offer_application_yet">No applicants yet</string>
    <string name="under_devlopment_mode">Under Devlopment Mode</string>
    <string name="applied_by">Applied by</string>
    <string name="members_applied">Members applied</string>
    <string name="account_holder_name">Account Holder Name</string>
    <string name="account_number">Account Number</string>
    <string name="routing_number">Routing Number</string>
    <string name="branch_code">Branch Code</string>
    <string name="ssn_number">SSN Number</string>
    <string name="postal_code">Postal Code</string>
    <string name="account_holder_type">Account Holder type</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="dd_mm_yy">DD/MM/YY</string>
    <string name="you_have_not_added_bank_account_yet_please_add">You have not added bank account yet, Please add</string>
    <string name="please_enter_account_holder_name">Please enter account holder name.</string>
    <string name="please_enter_account_number">Please enter account number.</string>
    <string name="please_enter_branch_code">Please enter branch code.</string>
    <string name="please_enter_SSN_number">Please enter SSN number.</string>
    <string name="please_enter_Postal_code">Please enter Postal code.</string>
    <string name="please_select_acc_type">Please select Account Type</string>
    <string name="pls_select_your_dob">Please select your Date of birth</string>
    <string name="account_holder_first_name">Account Holder First name</string>
    <string name="account_holder_last_name">Account Holder Last name</string>
    <string name="please_enter_account_holder_first_name">Please enter account holder first name</string>
    <string name="please_enter_account_holder_last_name">Please enter account holder last name</string>
    <string name="edit_bank_account">Edit Bank Account</string>
    <string name="add_bank_acc">Add Bank Account</string>
    <string name="manage_bank_acc">Manage Bank Account</string>
    <string name="update_bank_details">Update Account</string>
    <string name="payment">Payment</string>
    <string name="pay">Pay</string>
    <string name="save_and_update">Save and Update</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="long_term">LONG TERM</string>
    <string name="long_term1">Long term</string>
    <string name="ignor">Ignore</string>
    <string name="requests">Requests</string>
    <string name="n_a">N/A</string>
    <string name="start_date">Start date</string>
    <string name="end_date">End date</string>
    <string name="time_duration">Time Duration</string>
    <string name="more_details">More details</string>
    <string name="week_days">Week Days</string>
    <string name="member_requested"> Members requested</string>
    <string name="offered_rate">Offered Rate</string>
    <string name="clear_all">Clear all</string>
    <string name="pending_request1">Pending Request</string>
    <string name="application_confirmed">Application Confirmed</string>
    <string name="work_offer_accepted">Work offer accepted </string>
    <string name="request_cancel">Request Cancel</string>
    <string name="send_offer">Send Offer</string>
    <string name="my_profile">MY PROFILE</string>
    <string name="total_income">Total Income</string>
    <string name="completed">Completed</string>
    <string name="project_completed">Projects Completed</string>
    <string name="jobs">Work</string>
    <string name="watch_intro_video">Watch Intro Video</string>
    <string name="skills">Skills</string>
    <string name="hourly_rate">Hourly Rate</string>
    <string name="_hr">hr</string>
    <string name="settings">Settings</string>
    <string name="availability">Availability</string>
    <string name="logout">Logout</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_amp_condition"><![CDATA[Terms & Conditions]]></string>
    <string name="about_us">About Us</string>
    <string name="add_bank_account">Add Bank Account</string>
    <string name="change_password">Change Password</string>
    <string name="manage_credit_cards">Manage Credit Cards</string>
    <string name="please_enter_cardholder_name">Please enter cardholder name.</string>
    <string name="please_enter_card_number">Please enter card number.</string>
    <string name="please_select_mm_yy">Please select MM/YYYY.</string>
    <string name="please_enter_cvv">Please enter cvv Number.</string>
    <string name="new_password">New password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="current_password">Current Password</string>
    <string name="save">Save</string>
    <string name="add_skill">Add Skill</string>
    <string name="edit_profile">EDIT PROFILE</string>
    <string name="total_expense">Total Expense</string>
    <string name="completed_jobs">Completed Work</string>
    <string name="notifications">NOTIFICATIONS</string>
    <string name="forgot_password1">Forgot Password</string>
    <string name="write_comment_here">Write comment here</string>
    <string name="no_near_by_you">No Live Wires near you now.</string>
    <string name="add_your_skills">Add Your Skills</string>
    <string name="next">Next</string>
    <string name="please_update_your_location_to_know_live_wires_near_you">Please update your location to know Live Wires near you.</string>
    <string name="update_profile">Update Profile</string>
    <string name="add_the_skills_you_would_like_to_offer_and_your_hourly_rate_for_each">Add the skills you would like to offer and your hourly rate for each.</string>
</resources>