<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/change_pass_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_bg"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <TextView
            style="@style/mediumPopinsMediumStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/_10sdp"
            android:text="@string/change_password"
            android:textColor="@color/colorGreen" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorLightGray" />

        <ImageView
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_50sdp"
            android:layout_gravity="center"
            android:layout_margin="@dimen/_20sdp"
            app:srcCompat="@drawable/ic_change_pass" />

        <EditText
            android:id="@+id/et_current_pass"
            style="@style/SmallPopinsLightStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:background="@null"
            android:fontFamily="@font/poppins_light"
            android:hint="@string/current_password"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textColorHint="@color/colorDarkGray"
            android:textColor="@color/colorDarkBlack"
            android:textSize="@dimen/_12sdp"

            />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:background="@color/colorLightGray" />

        <EditText
            android:id="@+id/et_new_pass"
            style="@style/SmallPopinsLightStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:background="@null"
            android:inputType="textPassword"
            android:hint="@string/new_password"
            android:singleLine="true"
            android:textColorHint="@color/colorDarkGray"
            android:textColor="@color/colorDarkBlack" />


        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:background="@color/colorLightGray" />

        <EditText
            android:id="@+id/et_confirm_pass"
            style="@style/SmallPopinsLightStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:background="@null"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textColorHint="@color/colorDarkGray"
            android:textColor="@color/colorDarkBlack" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:background="@color/colorLightGray" />

        <Button
            android:id="@+id/btn_done"
            style="@style/mediumPopinsLightStyle"
            android:layout_width="@dimen/_120sdp"
            android:layout_height="@dimen/_32sdp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_25sdp"
            android:background="@drawable/button_green_bg"
            android:padding="@dimen/_5sdp"
            android:text="@string/done"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite" />

        <TextView
            android:id="@+id/tv_cancel"
            style="@style/mediumPopinsLightStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/_5sdp"
            android:background="?android:attr/selectableItemBackground"
            android:padding="@dimen/_5sdp"
            android:text="@string/cancel"
            android:textColor="@color/colorGreen" />


    </LinearLayout>

</RelativeLayout>